--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 body {
     background-color: whitesmoke;
